<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment"
    android:fitsSystemWindows="true">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/filmImage"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="fitCenter"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/icon_back"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">
            <TextView
                android:id="@+id/tvTitleDetail"
                style="@style/TextBlackBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Sangchi and the legend of 10 rings" />

            <ImageView
                android:id="@+id/iconStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_star"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/tvTitleDetail"
                app:layout_constraintTop_toBottomOf="@id/tvTitleDetail" />

            <TextView
                android:id="@+id/tvRatingDetail"
                style="@style/TextBlackSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@id/iconStar"
                app:layout_constraintStart_toEndOf="@id/iconStar"
                app:layout_constraintTop_toTopOf="@id/iconStar"
                tools:text="8.7" />

            <TextView
                android:id="@+id/bullet"
                style="@style/TextBlackBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@id/iconStar"
                app:layout_constraintStart_toEndOf="@id/tvRatingDetail"
                app:layout_constraintTop_toTopOf="@id/iconStar"
                android:text="\u2022"/>

            <TextView
                android:id="@+id/tvDate"
                style="@style/TextBlackSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@id/iconStar"
                app:layout_constraintStart_toEndOf="@id/bullet"
                app:layout_constraintTop_toTopOf="@id/iconStar"
                tools:text="2021-07-30" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_share"
                app:fabSize="mini"
                android:backgroundTint="@color/white"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@id/iconStar"
                app:layout_constraintBottom_toBottomOf="@id/iconStar"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/share_button" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_fav_border"
                app:fabSize="mini"
                android:backgroundTint="@color/white"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@id/iconStar"
                app:layout_constraintBottom_toBottomOf="@id/iconStar"
                app:layout_constraintEnd_toStartOf="@id/fabShare"
                android:contentDescription="@string/share_button" />

            <TextView
                android:id="@+id/ov"
                style="@style/TextBlackBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@id/tvTitleDetail"
                app:layout_constraintTop_toBottomOf="@id/tvRatingDetail"
                />

            <TextView
                android:id="@+id/tvOverview"
                style="@style/TextBlackSemiBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Overview"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvTitleDetail"
                app:layout_constraintTop_toBottomOf="@id/ov"
                />

            <TextView
                android:id="@+id/review"
                style="@style/TextBlackBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@id/tvTitleDetail"
                app:layout_constraintTop_toBottomOf="@id/tvOverview"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:listitem="@layout/item_review"
                app:layout_constraintTop_toBottomOf="@id/review"
                app:layout_constraintStart_toStartOf="@id/tvTitleDetail"
                app:layout_constraintEnd_toEndOf="@id/tvTitleDetail"/>

            <ProgressBar
                android:id="@+id/loadingReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="?android:attr/progressBarStyle"
                app:layout_constraintTop_toBottomOf="@id/review"
                app:layout_constraintStart_toStartOf="@id/tvTitleDetail"
                app:layout_constraintEnd_toEndOf="@id/tvTitleDetail"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>